New version of the test file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         </title>
     </head>
     <body>
-        <h1>Hello AngularJS </h1>
+        <h1>Hello AngularJS. Thrilled to be here</h1>
     </body>
 </html>
